--- a/ac.soton.coda.licence/licence.html
+++ b/ac.soton.coda.licence/licence.html
@@ -2,23 +2,114 @@
 <html>
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=iso-8859-1">
-<title>Company Confidential</title>
+<title>CODA Software User Agreement</title>
 </head>
 
 <body lang="EN-US"> 
-<h2>Unauthorised use is prohibited</h2>
-Any queries regarding authorisation to use this product should be directed to AWE Commercial IPR Manager. 
 
-<h2> Authorisation for US government purposes under 1958 Mutual Defence Agreement (MDA)</h2>
-&#169; Crown owned copyright (2015).
-The information is provided under the auspices of the Agreement for Co-operation on the Uses of Atomic Energy for Mutual Defence Purposes. 
-All intellectual property rights existing in this information remain the property of the Secretary of State for Defence of the United Kingdom of Great Britain and Northern Ireland. 
-The information may be used for US government information and evaluation purposes only and shall not be used for any other purpose, or communicated, transferred or disclosed to any 
-third party without the prior written permission of the Secretary of State. Any requests for further use or disclosure of the information should, in the first instance, be directed 
-to AWE Commercial IPR Manager.
+<h1>CODA Software User Agreement</h1>
 
-<p>June 19th, 2015</p>
+<p>February 2nd, 2016</p>
 
+<h2>Usage Of Content</h2>
+<p>
+All intellectual property rights existing in this information remain
+the property of the Secretary of State for Defence of the United
+Kingdom of Great Britain and Northern Ireland. The information may not
+be used or disclosed otherwise that is provided for by the
+above-mentioned licence without the prior written permission of the
+Secretary of State, as represented by the Copyright Unit, Defence
+Intellectual Property Rights, Poplar 2 #2214, MOD Abbey Wood South,
+Bristol BS34 8JH, UNITED KINGDOM.
+</p>
+
+<p>
+CODA is provided on the basis that the US Government will disclose to
+the UK Ministry of Defence (via AWE) any information, test results,
+modifications or further developments based on or derived from the
+disclosed information and will authorise the use of such information
+for UK Government purposes on the same terms (i.e. under the terms of
+the Creative Commons Attribution-NonCommercial- ShareAlike 4.0
+International License (CC BY NC SA 4.0)).
+</p>
+
+<p>
+For the avoidance of doubt, the Secretary of State of Defence for the
+United Kingdom of Great Britain and Northern Ireland does not provide
+any indemnity, and does not warrant the accuracy or completeness of
+the information, nor does it warrant the suitability or completeness
+of the information for any particular use or application.
+</p>
+
+<p>
+Any requests for further use or disclosure of the information should,
+in the first instance, be directed to AWE Commercial (via the Formal
+Methods team at AWE).
+</p>
+
+<h2>Applicable Licences</h2>
+<p>
+Unless otherwise indicated, all Content made available by the CODA
+project is provided to you under the terms and conditions of one of
+the following licences.
+<ul>
+<li>The Creative Commons Attribution-NonCommercial-ShareAlike 4.0
+International License (CC BY NC SA 4.0).  A copy of the CC BY NC SA
+4.0 is available at <a
+href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode"
+>https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode</a>.</li>
+
+<li>Eclipse Public License Version 1.0 ("EPL") (available at <a
+href="http://www.eclipse.org/legal/epl-v10.html"
+ >http://www.eclipse.org/legal/epl-v10.html</a>)</li>
+ 
+</ul>
+
+</p>
+
+<p>Content includes, but is not limited to, source code, object code,
+   documentation and other files maintained in the CODA repository ("Repository").</p>
+    
+<p>The terms and conditions governing Features and Included Features
+   should be contained in files named "licence.html" ("Feature
+   Licences").  Feature Licences may be located in any directory of a
+   Download or Module including, but not limited to the following
+   locations:</p>
+
+<ul>
+
+<li>Feature directories</li>
+
+<li>Shared-licence feature <i>ac.soton.coda.licence</i>
+</ul>
+		
+<p>Note: if a Feature made available by the CODA Project is
+   installed using the Eclipse Update Manager, you must agree to a
+   licence ("Feature Update Licence") during the installation process.
+   If the Feature contains Included Features, the Feature Update
+   Licence should either provide you with the terms and conditions
+   governing the Included Features or inform you where you can locate
+   them.  Feature Update Licences may be found in the "licence"
+   property of files named "feature.properties" found within a
+   Feature.  Such Feature Licences, and Feature Update
+   Licences contain the terms and conditions (or references to such
+   terms and conditions) that govern your use of the associated
+   Content in that directory.</p>
+
+<p>THE FEATURE LICENCES, AND FEATURE UPDATE LICENCES MAY REFER
+   TO THE CC BY NC SA 4.0, EPL OR OTHER LICENCE AGREEMENTS, NOTICES OR TERMS AND
+   CONDITIONS.</p>
+<ul>
+
+
+</ul>
+
+<p>IT IS YOUR OBLIGATION TO READ AND ACCEPT ALL SUCH TERMS AND
+   CONDITIONS PRIOR TO USE OF THE CONTENT.  If no Feature
+   Licence, or Feature Update Licence is provided, please contact the
+   CODA Project to determine what terms and conditions govern
+   that particular Content.</p>
+   
 <p><small>Java and all Java-based trademarks are trademarks of Sun
    Microsystems, Inc. in the United States, other countries, or
    both.</small></p>
