--- a/ac.soton.coda.licence/licence.html
+++ b/ac.soton.coda.licence/licence.html
@@ -9,7 +9,7 @@
 
 <h1>CODA Software User Agreement</h1>
 
-<p>February 2nd, 2016</p>
+<p>March 23rd, 2017</p>
 
 <h2>Usage Of Content</h2>
 <p>
@@ -17,20 +17,10 @@ All intellectual property rights existing in this information remain
 the property of the Secretary of State for Defence of the United
 Kingdom of Great Britain and Northern Ireland. The information may not
 be used or disclosed otherwise that is provided for by the
-above-mentioned licence without the prior written permission of the
+licence without the prior written permission of the
 Secretary of State, as represented by the Copyright Unit, Defence
 Intellectual Property Rights, Poplar 2 #2214, MOD Abbey Wood South,
 Bristol BS34 8JH, UNITED KINGDOM.
-</p>
-
-<p>
-CODA is provided on the basis that the US Government will disclose to
-the UK Ministry of Defence (via AWE) any information, test results,
-modifications or further developments based on or derived from the
-disclosed information and will authorise the use of such information
-for UK Government purposes on the same terms (i.e. under the terms of
-the Creative Commons Attribution-NonCommercial- ShareAlike 4.0
-International License (CC BY NC SA 4.0)).
 </p>
 
 <p>
@@ -53,12 +43,6 @@ Unless otherwise indicated, all Content made available by the CODA
 project is provided to you under the terms and conditions of one of
 the following licences.
 <ul>
-<li>The Creative Commons Attribution-NonCommercial-ShareAlike 4.0
-International License (CC BY NC SA 4.0).  A copy of the CC BY NC SA
-4.0 is available at <a
-href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode"
->https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode</a>.</li>
-
 <li>Eclipse Public License Version 1.0 ("EPL") (available at <a
 href="http://www.eclipse.org/legal/epl-v10.html"
  >http://www.eclipse.org/legal/epl-v10.html</a>)</li>
@@ -97,7 +81,7 @@ href="http://www.eclipse.org/legal/epl-v10.html"
    Content in that directory.</p>
 
 <p>THE FEATURE LICENCES, AND FEATURE UPDATE LICENCES MAY REFER
-   TO THE CC BY NC SA 4.0, EPL OR OTHER LICENCE AGREEMENTS, NOTICES OR TERMS AND
+   TO THE EPL OR OTHER LICENCE AGREEMENTS, NOTICES OR TERMS AND
    CONDITIONS.</p>
 <ul>
 
