fix problem in CODA licence text
(This means service re-issue of all CODA features)

--- a/ac.soton.coda.licence/licence.html
+++ b/ac.soton.coda.licence/licence.html
@@ -16,7 +16,7 @@
 All intellectual property rights existing in this information remain
 the property of the Secretary of State for Defence of the United
 Kingdom of Great Britain and Northern Ireland. The information may not
-be used or disclosed otherwise that is provided for by the
+be used or disclosed otherwise than is provided for by the
 licence without the prior written permission of the
 Secretary of State, as represented by the Copyright Unit, Defence
 Intellectual Property Rights, Poplar 2 #2214, MOD Abbey Wood South,
